mostly refactored