@@ -28,7 +28,6 @@ import com.apple.foundationdb.record.query.plan.cascades.values.translation.MaxM
 import com.google.common.base.Verify;
 import com.google.common.base.VerifyException;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -36,11 +35,9 @@ import javax.annotation.Nonnull;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 /**
  * Tests for value mapping.
@@ -114,7 +111,7 @@ public class ValueTranslationTest {
         return Type.Record
                 .fromFields(Arrays.stream(fields)
                         .map(this::f)
-                        .collect(Collectors.toList()));
+                        .collect(ImmutableList.toImmutableList()));
     }
 
     @SuppressWarnings("checkstyle:MethodName")
@@ -122,7 +119,7 @@ public class ValueTranslationTest {
     private Type.Record r(Type.Record.Field... fields) {
         return Type.Record
                 .fromFields(Arrays.stream(fields)
-                        .collect(Collectors.toList()));
+                        .collect(ImmutableList.toImmutableList()));
     }
 
     @SuppressWarnings("checkstyle:MethodName")
@@ -139,7 +136,7 @@ public class ValueTranslationTest {
 
     @Nonnull
     private Value rcv(Value... values) {
-        return RecordConstructorValue.ofUnnamed(Arrays.stream(values).collect(Collectors.toList()));
+        return RecordConstructorValue.ofUnnamed(Arrays.stream(values).collect(ImmutableList.toImmutableList()));
     }
 
     @SuppressWarnings("checkstyle:MethodName")
@@ -273,9 +270,8 @@ public class ValueTranslationTest {
            replace t with t', i.e. the result should be (t'.a.q, t'.a.r, (t'.b.t), t'.j.s)
          */
 
-        final var l1EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
         final var l1Translator = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1TranslatedQueryValue = pv.translateCorrelations(l1Translator, false);
+        final var l1TranslatedQueryValue = pv.translateCorrelations(l1Translator);
         final var expectedL1TranslatedQueryValue = rcv(
                 fv(t_, "a", "q"),
                 fv(t_, "a", "r"),
@@ -288,8 +284,7 @@ public class ValueTranslationTest {
           let's construct a max match map (m3) using the translated value with the candidate value.
          */
 
-        final var l1m3 = MaxMatchMap.calculate(l1EquivalenceMap, l1TranslatedQueryValue, p_v);
-
+        final var l1m3 = MaxMatchMap.calculate(l1TranslatedQueryValue, p_v);
         Map<Value, Value> l1ExpectedMapping = Map.of(
                 fv(t_, "a", "q"), fv(t_, "a", "q"),
                 fv(t_, "a", "r"), fv(t_, "a", "r"),
@@ -316,12 +311,11 @@ public class ValueTranslationTest {
         final var pAlias = CorrelationIdentifier.of("P");
         final var p_Alias = CorrelationIdentifier.of("P'");
         final var p = qov(pAlias, pv.getResultType());
-        final var pPredicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(fv(p, 0), LiteralValue.ofScalar(42)));
+        final var pPredicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(fv(p, 0), LiteralValue.ofScalar(42)));
         final var p_ = qov(p_Alias, p_v.getResultType());
         final var rv = rcv(fv(p, 2, 0));
         final var r_v = rcv(fv(p_, 1, 0));
 
-        final var l2EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(p_Alias));
         final var l2Translator = l1m3.pullUpTranslationMap(pAlias, p_Alias);
 
         /*
@@ -333,18 +327,18 @@ public class ValueTranslationTest {
            (p.2.0) in pre-order traversal.
          */
 
-        final var l2TranslatedQueryValue = rv.translateCorrelations(l2Translator, true);
+        final var l2TranslatedQueryValue = rv.translateCorrelations(l2Translator);
         final var expectedL2TranslatedQueryValue = rcv(fv(p_, 1, 0));
         Assertions.assertEquals(expectedL2TranslatedQueryValue, l2TranslatedQueryValue);
 
         /*
            translation of the predicate p.0 < 42 should yield p'.0.0 < 42
          */
-        final var l2TranslatedPredicate = pPredicate.translateCorrelations(l2Translator, true);
-        Assertions.assertEquals(new RelOpValue.LtFn().encapsulate(List.of(fv(p_, 0, 0), LiteralValue.ofScalar(42))), l2TranslatedPredicate);
+        final var l2TranslatedPredicate = pPredicate.translateCorrelations(l2Translator);
+        Assertions.assertEquals(new RelOpValue.LtFn().encapsulate(ImmutableList.of(fv(p_, 0, 0), LiteralValue.ofScalar(42))), l2TranslatedPredicate);
 
         final var l2ExpectedMapping = Map.of(rcv(fv(p_, 1, 0)), rcv(fv(p_, 1, 0)));
-        final var l2m3 = MaxMatchMap.calculate(l2EquivalenceMap, l2TranslatedQueryValue, r_v);
+        final var l2m3 = MaxMatchMap.calculate(l2TranslatedQueryValue, r_v);
         Assertions.assertEquals(l2ExpectedMapping, l2m3.getMapping());
         Assertions.assertEquals(expectedL2TranslatedQueryValue, l2m3.getQueryResultValue());
         Assertions.assertEquals(r_v, l2m3.getCandidateResultValue());
@@ -375,9 +369,8 @@ public class ValueTranslationTest {
                 fv(t_, "b", "m")
         );
 
-        final var l1EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
         final var l1Translator = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1M3 = MaxMatchMap.calculate(l1EquivalenceMap, pv.translateCorrelations(l1Translator, false), p_v);
+        final var l1M3 = MaxMatchMap.calculate(pv.translateCorrelations(l1Translator), p_v);
 
         final var expectedMapping = Map.of(
                 add(fv(t_, "a", "q"), fv(t_, "a", "r")), add(fv(t_, "a", "q"), fv(t_, "a", "r")),
@@ -419,9 +412,8 @@ public class ValueTranslationTest {
                 fv(t_, "b", "m")
         );
 
-        final var l1EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
         final var l1Translator = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1M3 = MaxMatchMap.calculate(l1EquivalenceMap, pv.translateCorrelations(l1Translator, false), p_v);
+        final var l1M3 = MaxMatchMap.calculate(pv.translateCorrelations(l1Translator), p_v);
 
         final var expectedMapping = Map.of(
                 add(fv(t_, "a", "q"), fv(t_, "a", "r")), add(fv(t_, "a", "q"), fv(t_, "a", "r")),
@@ -465,9 +457,8 @@ public class ValueTranslationTest {
                 fv(t_, "b", "m")
         );
 
-        final var l1EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
         final var l1Translator = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1M3 = MaxMatchMap.calculate(l1EquivalenceMap, pv.translateCorrelations(l1Translator, false), p_v);
+        final var l1M3 = MaxMatchMap.calculate(pv.translateCorrelations(l1Translator), p_v);
 
         final var expectedMapping = Map.of(
                 fv(t_, "a", "q"), fv(t_, "a", "q"),
@@ -518,9 +509,8 @@ public class ValueTranslationTest {
            replace t with t', i.e. the result should be (t'.a.q + s, t'.a.r, (t'.b.t), t'.j.s)
          */
 
-        final var l1EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias)).combine(AliasMap.ofAliases(sAlias, s_Alias));
         final var l1Translator = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1TranslatedQueryValue = pv.translateCorrelations(l1Translator, false);
+        final var l1TranslatedQueryValue = pv.translateCorrelations(l1Translator);
         final var expectedL1TranslatedQueryValue = rcv(
                 add(fv(t_, "a", "q"), s),
                 fv(t_, "a", "r"),
@@ -533,7 +523,7 @@ public class ValueTranslationTest {
           let's construct a max match map (m3) using the translated value with the candidate value.
          */
 
-        final var l1m3 = MaxMatchMap.calculate(l1EquivalenceMap, l1TranslatedQueryValue, p_v);
+        final var l1m3 = MaxMatchMap.calculate(AliasMap.ofAliases(sAlias, s_Alias), l1TranslatedQueryValue, p_v);
 
         Map<Value, Value> l1ExpectedMapping = Map.of(
                 add(fv(t_, "a", "q"), s),  add(fv(t_, "a", "q"), s_),
@@ -561,12 +551,11 @@ public class ValueTranslationTest {
         final var pAlias = CorrelationIdentifier.of("P");
         final var p_Alias = CorrelationIdentifier.of("P'");
         final var p = qov(pAlias, pv.getResultType());
-        final var pPredicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(fv(p, 0), LiteralValue.ofScalar(42)));
+        final var pPredicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(fv(p, 0), LiteralValue.ofScalar(42)));
         final var p_ = qov(p_Alias, p_v.getResultType());
         final var rv = rcv(fv(p, 2, 0));
         final var r_v = rcv(fv(p_, 1, 0));
 
-        final var l2EquivalenceMap = AliasMap.identitiesFor(ImmutableSet.of(p_Alias));
         final var l2Translator = l1m3.pullUpTranslationMap(pAlias, p_Alias);
 
         /*
@@ -578,18 +567,18 @@ public class ValueTranslationTest {
            (p.2.0) in pre-order traversal.
          */
 
-        final var l2TranslatedQueryValue = rv.translateCorrelations(l2Translator, true);
+        final var l2TranslatedQueryValue = rv.translateCorrelations(l2Translator);
         final var expectedL2TranslatedQueryValue = rcv(fv(p_, 1, 0));
         Assertions.assertEquals(expectedL2TranslatedQueryValue, l2TranslatedQueryValue);
 
         /*
            translation of the predicate p.0 < 42 should yield p'.0.0 < 42
          */
-        final var l2TranslatedPredicate = pPredicate.translateCorrelations(l2Translator, true);
-        Assertions.assertEquals(new RelOpValue.LtFn().encapsulate(List.of(fv(p_, 0, 0), LiteralValue.ofScalar(42))), l2TranslatedPredicate);
+        final var l2TranslatedPredicate = pPredicate.translateCorrelations(l2Translator);
+        Assertions.assertEquals(new RelOpValue.LtFn().encapsulate(ImmutableList.of(fv(p_, 0, 0), LiteralValue.ofScalar(42))), l2TranslatedPredicate);
 
         final var l2ExpectedMapping = Map.of(rcv(fv(p_, 1, 0)), rcv(fv(p_, 1, 0)));
-        final var l2m3 = MaxMatchMap.calculate(l2EquivalenceMap, l2TranslatedQueryValue, r_v);
+        final var l2m3 = MaxMatchMap.calculate(l2TranslatedQueryValue, r_v);
         Assertions.assertEquals(l2ExpectedMapping, l2m3.getMapping());
         Assertions.assertEquals(expectedL2TranslatedQueryValue, l2m3.getQueryResultValue());
         Assertions.assertEquals(r_v, l2m3.getCandidateResultValue());
@@ -682,8 +671,7 @@ public class ValueTranslationTest {
          */
 
         final var l1TranslatorTValue = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1EquivalenceTMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
-        final var l1TranslatedQueryTValue = tv.translateCorrelations(l1TranslatorTValue, false);
+        final var l1TranslatedQueryTValue = tv.translateCorrelations(l1TranslatorTValue);
         final var expectedL1TranslatedQueryTValue = rcv(
                 fv(t_, "a", "q"),
                 fv(t_, "a", "r"),
@@ -693,8 +681,7 @@ public class ValueTranslationTest {
         Assertions.assertEquals(expectedL1TranslatedQueryTValue, l1TranslatedQueryTValue);
 
         final var l1TranslatorMValue = TranslationMap.ofAliases(mAlias, m_Alias);
-        final var l1EquivalenceMMap = AliasMap.identitiesFor(ImmutableSet.of(m_Alias));
-        final var l1TranslatedQueryMValue = mv.translateCorrelations(l1TranslatorMValue, false);
+        final var l1TranslatedQueryMValue = mv.translateCorrelations(l1TranslatorMValue);
         final var expectedL1TranslatedQueryMValue = rcv(
                 rcv(fv(m_, "m1", "m11")),
                 fv(m_, "m2", "m21")
@@ -702,8 +689,7 @@ public class ValueTranslationTest {
         Assertions.assertEquals(expectedL1TranslatedQueryMValue, l1TranslatedQueryMValue);
 
         final var l1TranslatorNValue = TranslationMap.ofAliases(nAlias, n_Alias);
-        final var l1EquivalenceNMap = AliasMap.identitiesFor(ImmutableSet.of(n_Alias));
-        final var l1TranslatedQueryNValue = nv.translateCorrelations(l1TranslatorNValue, false);
+        final var l1TranslatedQueryNValue = nv.translateCorrelations(l1TranslatorNValue);
         final var expectedL1TranslatedQueryNValue = rcv(
                 fv(n_, "n2", "n21"),
                 rcv(fv(n_, "n1", "n12"), fv(n_, "n3", "n32"))
@@ -714,7 +700,7 @@ public class ValueTranslationTest {
           let's construct a max match map (m3) using the translated value with the candidate value, for tv, mv, and nv.
          */
 
-        final var l1m3ForTValue = MaxMatchMap.calculate(l1EquivalenceTMap, l1TranslatedQueryTValue, t_v);
+        final var l1m3ForTValue = MaxMatchMap.calculate(l1TranslatedQueryTValue, t_v);
 
         Map<Value, Value> l1ExpectedMappingForTValue = Map.of(
                 fv(t_, "a", "q"), fv(t_, "a", "q"),
@@ -725,7 +711,7 @@ public class ValueTranslationTest {
         Assertions.assertEquals(expectedL1TranslatedQueryTValue, l1m3ForTValue.getQueryResultValue());
         Assertions.assertEquals(t_v, l1m3ForTValue.getCandidateResultValue());
 
-        final var l1m3ForMValue = MaxMatchMap.calculate(l1EquivalenceMMap, l1TranslatedQueryMValue, m_v);
+        final var l1m3ForMValue = MaxMatchMap.calculate(l1TranslatedQueryMValue, m_v);
 
         Map<Value, Value> l1ExpectedMappingForMValue = Map.of(
                 fv(m_, "m1", "m11"), fv(m_, "m1", "m11"),
@@ -734,7 +720,7 @@ public class ValueTranslationTest {
         Assertions.assertEquals(expectedL1TranslatedQueryMValue, l1m3ForMValue.getQueryResultValue());
         Assertions.assertEquals(m_v, l1m3ForMValue.getCandidateResultValue());
 
-        final var l1m3ForNValue = MaxMatchMap.calculate(l1EquivalenceNMap, l1TranslatedQueryNValue, n_v);
+        final var l1m3ForNValue = MaxMatchMap.calculate(l1TranslatedQueryNValue, n_v);
 
         Map<Value, Value> l1ExpectedMappingForNValue = Map.of(
                 fv(n_, "n2", "n21"), fv(n_, "n2", "n21"),
@@ -813,20 +799,20 @@ public class ValueTranslationTest {
         final var r = qov(rAlias, nv.getResultType());
 
         // p.0 + q.0.0 < n.0 - n.1.0
-        final var predicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(add(fv(p, 0), fv(q, 0, 0)), add(fv(r, 0), fv(r, 1, 0))));
+        final var predicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(add(fv(p, 0), fv(q, 0, 0)), add(fv(r, 0), fv(r, 1, 0))));
 
 
         final var l2TranslatorForPValue = l1m3ForTValue.pullUpTranslationMap(pAlias, p_Alias);
         final var l2TranslatorForQValue = l1m3ForMValue.pullUpTranslationMap(qAlias, q_Alias);
         final var l2TranslatorForRValue = l1m3ForNValue.pullUpTranslationMap(rAlias, r_Alias);
         final var compositeTranslator = TranslationMap.compose(ImmutableList.of(l2TranslatorForPValue, l2TranslatorForQValue, l2TranslatorForRValue));
-        final var translatedPredicate = predicate.translateCorrelations(compositeTranslator, true);
+        final var translatedPredicate = predicate.translateCorrelations(compositeTranslator);
 
         final var p_ = qov(p_Alias, t_v.getResultType());
         final var q_ = qov(q_Alias, m_v.getResultType());
         final var r_ = qov(r_Alias, n_v.getResultType());
 
-        final var expectedTranslatedPredicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(add(fv(p_, 0, 0), fv(q_, 2)), add(fv(r_, 2, 2), fv(r_, 1))));
+        final var expectedTranslatedPredicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(add(fv(p_, 0, 0), fv(q_, 2)), add(fv(r_, 2, 2), fv(r_, 1))));
 
         Assertions.assertEquals(expectedTranslatedPredicate, translatedPredicate);
     }
@@ -852,7 +838,7 @@ public class ValueTranslationTest {
             final var tTranslator = TranslationMap.ofAliases(tAlias, t_Alias);
             final var sTranslator = TranslationMap.ofAliases(sAlias, s_Alias);
             final var compositeTranslator = TranslationMap.compose(ImmutableList.of(tTranslator, sTranslator));
-            final var translatedValue = tv.translateCorrelations(compositeTranslator, true);
+            final var translatedValue = tv.translateCorrelations(compositeTranslator);
             final var expectedTranslatedValue = rcv(
                     fv(t_, "a", "q"),
                     add(s_, fv(t_, "a", "r")),
@@ -862,7 +848,7 @@ public class ValueTranslationTest {
 
             // s R t
             final var symmetricTranslator = TranslationMap.compose(ImmutableList.of(sTranslator, tTranslator));
-            final var identicalTranslatedValue = tv.translateCorrelations(symmetricTranslator, true);
+            final var identicalTranslatedValue = tv.translateCorrelations(symmetricTranslator);
             Assertions.assertEquals(identicalTranslatedValue, expectedTranslatedValue);
         }
 
@@ -875,7 +861,7 @@ public class ValueTranslationTest {
 
             // (t R s) R u
             final var ts_uTranslator = TranslationMap.compose(ImmutableList.of(tsTranslator, uTranslator));
-            final var translatedValue = tv.translateCorrelations(ts_uTranslator, true);
+            final var translatedValue = tv.translateCorrelations(ts_uTranslator);
             final var expectedTranslatedValue = rcv(
                     fv(t_, "a", "q"),
                     add(s_, fv(t_, "a", "r")),
@@ -886,7 +872,7 @@ public class ValueTranslationTest {
             // t R (s R u)
             final var suTranslator = TranslationMap.compose(ImmutableList.of(sTranslator, uTranslator));
             final var t_suTranslator = TranslationMap.compose(ImmutableList.of(suTranslator, tTranslator));
-            final var identicalTranslatedValue = tv.translateCorrelations(t_suTranslator, true);
+            final var identicalTranslatedValue = tv.translateCorrelations(t_suTranslator);
             Assertions.assertEquals(identicalTranslatedValue, translatedValue);
         }
     }
@@ -959,21 +945,20 @@ public class ValueTranslationTest {
          */
 
         final var l1TranslatorTValue = TranslationMap.ofAliases(tAlias, t_Alias);
-        final var l1EquivalenceTMap = AliasMap.identitiesFor(ImmutableSet.of(t_Alias));
-        final var l1TranslatedQueryTValue = tv.translateCorrelations(l1TranslatorTValue, false);
         final var l1TranslatorMValue = TranslationMap.ofAliases(mAlias, m_Alias);
-        final var l1EquivalenceMMap = AliasMap.identitiesFor(ImmutableSet.of(m_Alias));
-        final var l1TranslatedQueryMValue = mv.translateCorrelations(l1TranslatorMValue, false);
         final var l1TranslatorNValue = TranslationMap.ofAliases(nAlias, n_Alias);
-        final var l1EquivalenceNMap = AliasMap.identitiesFor(ImmutableSet.of(n_Alias));
-        final var l1TranslatedQueryNValue = nv.translateCorrelations(l1TranslatorNValue, false);
-        /*
-          let's construct a max match map (m3) using the translated value with the candidate value, for tv, mv, and nv.
-         */
 
-        final var l1m3ForTValue = MaxMatchMap.calculate(l1EquivalenceTMap, l1TranslatedQueryTValue, t_v);
-        final var l1m3ForMValue = MaxMatchMap.calculate(l1EquivalenceMMap, l1TranslatedQueryMValue, m_v);
-        final var l1m3ForNValue = MaxMatchMap.calculate(l1EquivalenceNMap, l1TranslatedQueryNValue, n_v);
+        final var l1TranslatedQueryTValue = tv.translateCorrelations(l1TranslatorTValue);
+        final var l1TranslatedQueryMValue = mv.translateCorrelations(l1TranslatorMValue);
+        final var l1TranslatedQueryNValue = nv.translateCorrelations(l1TranslatorNValue);
+
+        //
+        //  Let's construct a max match map (m3) using the translated value with the candidate value,
+        //  for tv, mv, and nv.
+        //
+        final var l1m3ForTValue = MaxMatchMap.calculate(l1TranslatedQueryTValue, t_v);
+        final var l1m3ForMValue = MaxMatchMap.calculate(l1TranslatedQueryMValue, m_v);
+        final var l1m3ForNValue = MaxMatchMap.calculate(l1TranslatedQueryNValue, n_v);
 
         // translate a complex join condition, each quantifier in the join condition is assumed to match a corresponding
         // quantifier in a non-joined index candidate.
@@ -1051,7 +1036,7 @@ public class ValueTranslationTest {
         final var r = qov(rAlias, nv.getResultType());
 
         // p.0 + q.0.0 < r.0 + s + u
-        final var predicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(add(fv(p, 0), fv(q, 0, 0)), add(add(fv(r, 0), s), u)));
+        final var predicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(add(fv(p, 0), fv(q, 0, 0)), add(add(fv(r, 0), s), u)));
 
         final var translators = new ArrayList<TranslationMap>();
         translators.add(l1m3ForTValue.pullUpTranslationMap(pAlias, p_Alias));
@@ -1064,13 +1049,13 @@ public class ValueTranslationTest {
         final var q_ = qov(q_Alias, m_v.getResultType());
         final var r_ = qov(r_Alias, n_v.getResultType());
 
-        final var expectedTranslatedPredicate = (Value)new RelOpValue.LtFn().encapsulate(List.of(add(fv(p_, 0, 0), fv(q_, 2)), add(add(fv(r_, 2, 2), s_), u_)));
+        final var expectedTranslatedPredicate = (Value)new RelOpValue.LtFn().encapsulate(ImmutableList.of(add(fv(p_, 0, 0), fv(q_, 2)), add(add(fv(r_, 2, 2), s_), u_)));
 
         final var random = new Random(42);
         for (int i = 0; i < 10; i++) {
             Collections.shuffle(translators, random);
             final var compositeTranslator = TranslationMap.compose(translators);
-            final var translatedPredicate = predicate.translateCorrelations(compositeTranslator, true);
+            final var translatedPredicate = predicate.translateCorrelations(compositeTranslator);
             Assertions.assertEquals(expectedTranslatedPredicate, translatedPredicate);
         }
     }
